refactor: update Dockerfile and nginx configuration

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -1,6 +1,8 @@
-worker_processes 1;
+worker_processes auto;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
     include       /etc/nginx/mime.types;
@@ -10,10 +12,11 @@ http {
         listen 80;
         server_name _;
 
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ =404;
+            try_files $uri $uri/ /index.html;
         }
     }
 }
