feat: add HTML generation from Markdown files

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -16,7 +16,13 @@ http {
         index index.html;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            try_files $uri $uri/ =404;
+        }
+
+        location /slide/ {
+            rewrite ^/slide/(.*)$ /html/$1.html break;
+            root /usr/share/nginx/html;
         }
     }
+
 }
