--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,26 @@
 [
-  { "type": "year", "year": 1980, "text": "VAX 11 Series launch" },
+  { "type": "year", "year": 1977, "text": "VAX-11/780 launched" },
   { "type": "content", "path": "/slides/vax-11-780.md" },
   
-  { "type": "year", "year": 1980, "text": "VAX 11-750 introduced" },
+  { "type": "year", "year": 1980, "text": "VAX-11/750 launched" },
   { "type": "content", "path": "/slides/vax-11-750.md" },
   
-  { "type": "year", "year": 1982, "text": "Vicom Image Processor released" },
+  { "type": "year", "year": 1981, "text": "VICOM Digital Image Processor released" },
   { "type": "content", "path": "/slides/vicom-image-processor.md" }, 
   
-  { "type": "year", "year": 1980, "text": "Plexus P40 computer launched" },
+  { "type": "year", "year": 1981, "text": "Plexus P/40 computer released" },
   { "type": "content", "path": "/slides/plexus-p40.md" },
   
-  { "type": "year", "year": 1980, "text": "VAX 8600 high-performance system" },
+  { "type": "year", "year": 1984, "text": "VAX 8600 launched" },
   { "type": "content", "path": "/slides/vax-8600.md" },
   
   { "type": "year", "year": 1985, "text": "MicroVAX II released" },
   { "type": "content", "path": "/slides/microvax-2.md" },
   
-  { "type": "year", "year": 1987, "text": "Sun3 280S-8 workstation" },
+  { "type": "year", "year": 1985, "text": "Sun-3/280S launched" },
   { "type": "content", "path": "/slides/sun3-280s-8.md" },
   
-  { "type": "year", "year": 1990, "text": "Convex C-120 'Candia' launched" },
+  { "type": "year", "year": 1991, "text": "Convex C-120 Vector Processor launched" },
   { "type": "content", "path": "/slides/convex-c-120-candia.md" }
 ]
 
